<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QR Scanner</string>
    <string name="app_title">📷 QR &amp; Barcode Scanner</string>
    <string name="result_label">Результат сканирования:</string>
    <string name="no_result">Наведите камеру на QR или штрих-код</string>
    <string name="start_scan">Начать сканирование</string>
    <string name="stop_scan">Остановить</string>
    <string name="copy">Копировать</string>
    <string name="copied">Скопировано в буфер обмена</string>
    <string name="camera_permission_denied">Доступ к камере необходим для сканирования кодов</string>
    <string name="grant_permission">Предоставить доступ</string>
    <string name="permission_required">Требуется разрешение</string>
    <string name="scan_history">История сканирований</string>
    <string name="clear_history">Очистить историю</string>
    <string name="settings">Настройки</string>
    <string name="flash_on">Фонарик ВКЛ</string>
    <string name="flash_off">Фонарик ВЫКЛ</string>
</resources>
